Update trang man hinh chinh